# google-takeout-chat-viewer

./: .gitignore  LICENSE  README.md  bun.lockb  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
.github/workflows/: main.yml
src/: App.tsx  index.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: 1024.icns
src-tauri/src/: main.rs
src-tauri/src/commands/: mod.rs
src-tauri/src/commands/chat_processor/: mod.rs  structs.rs
src/modules/ChatViewer/: ChatList.tsx  ChatWindow.tsx  SearchResults.tsx  index.tsx
src/modules/CustomDatalist/: index.tsx
src/modules/FolderSelector/: index.tsx
src/modules/defaultApp/: index.tsx
